[gd_scene load_steps=6 format=3 uid="uid://hbb2wxcb7sxf"]

[ext_resource type="Script" uid="uid://e65imwf654xt" path="res://project/save/menu.gd" id="1_sihek"]
[ext_resource type="PackedScene" uid="uid://du65ljq0jsyh" path="res://project/ui/modal/menu.tscn" id="1_snn16"]
[ext_resource type="Script" uid="uid://c84mmkfcun3hb" path="res://addons/std/scene/handle.gd" id="2_bgb2t"]
[ext_resource type="PackedScene" uid="uid://ig0aeexy2dcl" path="res://project/save/slot_button.tscn" id="3_842n5"]
[ext_resource type="PackedScene" uid="uid://11thq3wp16vi" path="res://project/ui/input/focus_handler.tscn" id="4_dj346"]

[node name="SaveMenu" instance=ExtResource("1_snn16")]

[node name="PanelContainer" parent="CenterContainer" index="0" node_paths=PackedStringArray("scene_handle")]
script = ExtResource("1_sihek")
scene_handle = NodePath("SceneHandle")

[node name="SceneHandle" type="Node" parent="CenterContainer/PanelContainer" index="0"]
script = ExtResource("2_bgb2t")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer" index="1"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "save_slots_choose"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlotButtons" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 32

[node name="SlotButton1" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SlotButtons" index="0" instance=ExtResource("3_842n5")]
layout_mode = 2
size_flags_horizontal = 3

[node name="FocusHandler" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SlotButtons/SlotButton1" index="0"]
use_as_anchor = true

[node name="SlotButton2" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SlotButtons" index="1" instance=ExtResource("3_842n5")]
layout_mode = 2
size_flags_horizontal = 3
slot = 1

[node name="SlotButton3" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SlotButtons" index="2" instance=ExtResource("3_842n5")]
layout_mode = 2
size_flags_horizontal = 3
slot = 2

[node name="SlotButton4" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SlotButtons" index="3" instance=ExtResource("3_842n5")]
layout_mode = 2
size_flags_horizontal = 3
slot = 3

[node name="DeleteButtons" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 32

[node name="Button1" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteButtons" index="0"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "save_slots_delete"

[node name="FocusHandler" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteButtons/Button1" index="0" instance=ExtResource("4_dj346")]

[node name="Button2" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteButtons" index="1"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "save_slots_delete"

[node name="FocusHandler" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteButtons/Button2" index="0" instance=ExtResource("4_dj346")]

[node name="Button3" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteButtons" index="2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "save_slots_delete"

[node name="FocusHandler" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteButtons/Button3" index="0" instance=ExtResource("4_dj346")]

[node name="Button4" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteButtons" index="3"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "save_slots_delete"

[node name="FocusHandler" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/DeleteButtons/Button4" index="0" instance=ExtResource("4_dj346")]

[editable path="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SlotButtons/SlotButton1"]
